--- a/index.html
+++ b/index.html
@@ -1,24 +1,28 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shein Analytics Pro - Product Performance Dashboard</title>
-    <meta name="description" content="Professional analytics dashboard for Shein product data. Track sales, ratings, and customer reviews with real-time insights." />
-    <meta name="author" content="Shein Analytics" />
 
-    <meta property="og:title" content="Shein Analytics Pro - Product Performance Dashboard" />
-    <meta property="og:description" content="Professional analytics dashboard for Shein product data. Track sales, ratings, and customer reviews with real-time insights." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Shein Analytics - Product Performance Dashboard</title>
+  <meta name="description"
+    content="Professional analytics dashboard for Shein product data. Track sales, ratings, and customer reviews with real-time insights." />
+  <meta name="author" content="Shein Analytics" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <meta property="og:title" content="Shein Analytics - Product Performance Dashboard" />
+  <meta property="og:description"
+    content="Professional analytics dashboard for Shein product data. Track sales, ratings, and customer reviews with real-time insights." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@Lovable" />
+  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
